--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django_uw_keycloak
-version = 1.1
+version = 1.1.2
 description = Middleware to allow authorization using Keycloak and Django
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
@@ -19,8 +19,8 @@ include_package_data = true
 packages = find:
 install_requires =
     Django >= "2.2"
-    rest_framework >= "3.0"
+    djangorestframework >= "3.0"
     dry-rest-permissions >= "0.1"
-    jwt >= "1.0"
+    PyJWT >= "2.3"
     requests >= "2.0"
-
+    cachetools >= "5.0"
