--- a/setup.cfg
+++ b/setup.cfg
@@ -18,9 +18,9 @@ classifiers =
 include_package_data = true
 packages = find:
 install_requires =
-    Django>="2.2"
-    djangorestframework>="3.0"
-    dry-rest-permissions>="0.1"
-    PyJWT>="2.3"
-    requests>="2.0"
-    cachetools>="5.0"
+    Django >= 2.2
+    djangorestframework >= "3.0"
+    dry-rest-permissions >= "0.1"
+    PyJWT >= "2.3"
+    requests >= "2.0"
+    cachetools >= "5.0"
